tests/error/13_list_get_oob.py
# [RUNTIME] List get out of bound
# RUNTIME ERROR: Index out of bounds. Trying to access 0, length is 0
a: [int] = []
print(a[0])
